--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,8 +47,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }} # crear los secretos en Settings -->
-          Secrets/Actions/New Repository Secret
+          username: ${{ secrets.DOCKERHUB_USERNAME }} # crear los secretos en Settings --> Secrets/Actions/New Repository Secret
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Etiquetar con formato DockerHub
         run: |
